# IssouGuard

./: .gitignore  Cargo.toml
src/: app.rs  main.rs  tui.rs
src/collectors/: defender.rs  files.rs  mod.rs  powershell_history.rs  processes.rs  registry.rs  run_mru.rs  scheduled_tasks.rs  services.rs
src/core/: mod.rs  model.rs  quarantine.rs  report.rs  risk_score.rs  timeline.rs
src/remediation/: defender.rs  mod.rs  offline_scan.rs  persistence.rs  process_kill.rs  quarantine.rs
src/windows/: admin.rs  mod.rs  paths.rs  powershell.rs  signature.rs
