[package]
name = "issaguard"
version = "0.2.0"
edition = "2021"
description = "IssaGuard - Assistant IR local prudent pour incident faux Claude Code / mshta"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
